# peacenik

./: .gitignore  .travis.yml  Cargo.toml  README.md  alphabet.beatnik  build.sh  rustfmt.toml
examples/: alphabet.wottasquare  hello-world-hamlet.beatnik  hello-world.wottasquare
src/: common.rs  main.rs  markov.rs  runner.rs
