[package]
name = "peacenik"
version = "0.1.0"
authors = ["Tom Parker <palfrey@tevp.net>"]

[dependencies]
log = "*"
env_logger = "0.3"
enum_primitive = "*"
num-traits = "*"
clap = "2.20.5"
quickcheck = "0.4.1"
serde = "0.9"
serde_derive = "0.9"
serde_yaml = "0.6"

[replace]
"yaml-rust:0.3.5" = { git = "https://github.com/palfrey/yaml-rust.git", branch = "master", features = ["preserve_order"] }

[dependencies.nom]
version = "^2.1"
features = ["verbose-errors"]
