[package]
name = "peacenik"
version = "0.1.0"
authors = ["Tom Parker-Shemilt <palfrey@tevp.net>"]
edition = "2018"

[dependencies]
log = "*"
env_logger = "0.3"
enum_primitive = "*"
num-traits = "*"
clap = "2.20.5"
quickcheck = "0.4.1"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
rand = "0.3"
unicode-normalization = "0.1"

[dependencies.nom]
version = "^2.1"
features = ["verbose-errors"]
